# crewai-backend

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2c0516590c18_initial_commit.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py
backend/app/core/: auth.py  config.py  db.py
backend/app/crud/: base.py  crud_item.py
backend/app/models/: __init__.py  base.py  item.py  user.py
backend/scripts/: format.sh  lint.sh  pre-start.sh  tests-start.sh
backend/tests/: conftest.py  test_main.py
backend/tests/api/api_v1/: test_items.py  test_utils.py
backend/tests/crud/: test_item.py
scripts/: bump.sh  update-env.sh
supabase/: config.toml
